logs/progressnotifier.log
Listing '.'...
Listing './bin'...
Compiling './bin/rpyc_classic.py'...
Compiling './bin/rpyc_registry.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ProgressNotifier'...
Compiling './lib/python3.5/site-packages/ProgressNotifier/__init__.py'...
***   File "./lib/python3.5/site-packages/ProgressNotifier/__init__.py", line 14
    print "[{device}] NotifyEnd() try...".format(device=deviceID)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ProgressNotifier-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/getautoopt'...
Compiling './lib/python3.5/site-packages/getautoopt/__init__.py'...
***   File "./lib/python3.5/site-packages/getautoopt/__init__.py", line 33
    print "minitouch_port should be integer"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/getautoopt-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumbum'...
Listing './lib/python3.5/site-packages/plumbum/cli'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/colorlib'...
Listing './lib/python3.5/site-packages/plumbum/commands'...
Listing './lib/python3.5/site-packages/plumbum/fs'...
Listing './lib/python3.5/site-packages/plumbum/machines'...
Listing './lib/python3.5/site-packages/plumbum/path'...
Listing './lib/python3.5/site-packages/plumbum-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rpyc'...
Listing './lib/python3.5/site-packages/rpyc/core'...
Listing './lib/python3.5/site-packages/rpyc/experimental'...
Listing './lib/python3.5/site-packages/rpyc/lib'...
Listing './lib/python3.5/site-packages/rpyc/utils'...
Listing './lib/python3.5/site-packages/rpyc-3.4.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
